<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newaccount"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginBottom="1dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edt_email_register"
        android:layout_marginTop="20dp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edt_senha_register"
        android:layout_marginTop="20dp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:autofillHints="password"
        android:textColor="@color/white"
        android:inputType="textPassword"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edt_confirmar_senha_register"
        android:layout_marginTop="20dp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:autofillHints="password"
        tools:ignore="UnusedAttribute" />

    <CheckBox
        android:id="@+id/ckb_mostrar_senha_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:buttonTint="@color/white"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="10dp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/login"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btn_registrar_register"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:textColor="@color/white"
        android:text="@string/register"
        android:layout_marginTop="12dp" />

    <ProgressBar
        android:id="@+id/login_progress_bar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="invisible"
        android:layout_marginTop="12dp"
        tools:ignore="UnusedAttribute" />

</LinearLayout>