<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.ProductActivity">

    <TextView
        android:id="@+id/txt_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/product_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edt_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_product_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/product_description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="UnusedAttribute,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txt_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_product_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:text="@string/product_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edt_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_product_price"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/product_price"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="UnusedAttribute,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txt_product_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_product_price"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:text="@string/product_activate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/check_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:layout_alignTop="@+id/txt_product_activate"
        android:layout_toEndOf="@id/txt_product_activate"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/btn_save"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_save"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/red"
        android:text="@string/btn_delete"
        android:textColor="@color/white"
        tools:ignore="UnusedAttribute,TextContrastCheck,TextContrastCheck" />
    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_close"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>