<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="36sp"
        android:textAlignment="center"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:text="@string/products_list"
        tools:ignore="UnusedAttribute" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_logout"
        android:layout_below="@+id/text_title"
        android:layout_centerHorizontal="true"
        android:listSelector="@color/white" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/blue"
        android:text="@string/add"
        android:textColor="@color/white"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/btn_add"
        android:backgroundTint="@color/red"
        android:text="@string/logout"
        android:textColor="@color/white"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>